--- a/asp/todo.txt
+++ b/asp/todo.txt
@@ -1,17 +1,13 @@
+h1. new: 
+# dont do repeating moves:
+:- move(K,X,Y,R,D), move(K+1,X,Y,R,D). 
+
+# choose number of moves, then implication makes choice constraint. might improve search because no check anmore for holes in sequence of moves. 
+
+h1. done
 # nonintersecting:
-intersecting(K) :- move(K,X,Y), move(K+1,X,Y). 
-upperLeft(K,X,Y) :- move(K,X,Y,_,_). 
-:- not intersecting(K), upperLeft(K,X,Y), upperLeft(K+1,XX,YY), (n*(Y-1)+X) < (n*(YY-1)+XX).  
-
 # single ones in the end
-isSingle(K) :- move(K,X,Y,0,0). 
-:- k(K;K+1), isSingle(K), not isSingle(K+1). 
+# containment
 
-#containment
-containing(K) :- move(K+1,X,Y), not move(K,X,Y). 
-:- intersecting(K), not containing(K), k(K).
-
-# big one in the end
-:- k(K), not final(K), move(K,0,0,n-1,n-1). 
 
 
