--- a/sat/sat-spin.tex
+++ b/sat/sat-spin.tex
@@ -74,4 +74,12 @@ Third, the tiles that have changed places have to be rotated. This is done using
 \paragraph{Symmetry breaking predicates}
 
 
+\begin{equation}
+B_m = \{ n \in M \mid n \leq m \mathrm{~and~} ( S_n \subseteq S_m \mathrm{~or~} S_n \supset S_m \mathrm{~or~} S_n \cap S_m = \emptyset) \}
+\end{equation}
+
+\begin{equation}
+\bigwedge_{k=0}^{N} \bigwedge_{m \in M} \bigwedge_{n \in B_m} (\bar t_{k,m} \lor \bar t_{k+1,n}) 
+\end{equation}
+
 \end{document}
