--- a/asp/analysis/todo.txt
+++ b/asp/analysis/todo.txt
@@ -1,9 +1,11 @@
-* Fixing 
+* Fixing does not work in general
 
 * Make the move if you can fix ( all number already in the
 right row/column)
 
-* Make the move( 1x2) if you can fix also I can show how
+* Make the move( 1x2) if you can fix (deprecated now?)
+
+* I can show how
 many boards are saved by the canonical board symmetry
 breaking (up to 7/8) 
   
